# RTQL8KinectLibrary

./: .gitignore  CMakeLists.txt  Directories.cmake  README.txt  ThirdParties.cmake
data/: gui.xml  kinectUIConfigJT.xml  kinectui.xml  kinectuidefault.xml
data/grammar/: SpeechGrammar.grxml  SpeechGrammarNested.grxml  SpeechGrammarOld.grxml
data/knowledge/: buffer.xml.orig  clustering.xml  elbowprep.xml  empty.xml  final_B0_bar.xml  final_B3_jump.xml  final_B3_jump_bk.xml  final_B4_rolling.xml  final_B5_rolljump.xml  final_B7_diveroll.xml  final_B8_flip.xml  opt.xml  (+50 more)
src/: CMakeLists.txt  CMakeLists.txt.orig
src/apps/closedLoop/: CMakeLists.txt  Main.cpp  MyWindow.cpp  MyWindow.h
src/apps/hanging/: CMakeLists.txt  Controller.cpp  Controller.h  Main.cpp  MyWindow.cpp  MyWindow.h
src/apps/kinectGUI/: CMakeLists.txt  Main.cpp  MyKinController.cpp  MyKinController.h  MyWindow.cpp  MyWindow.h
src/apps/knowledge/: CMakeLists.txt
src/apps/knowledge/benchmark/: CMakeLists.txt  main.cpp
src/apps/knowledge/common/: Paths.h  app_cppcommon.h  app_hppcommon.h  fullbody1.h  globjects.h  render_cppcommon.h
src/apps/knowledge/controller/: CMakeLists.txt  app_composite_controller.cpp  app_composite_controller.h  app_controller.cpp  app_controller.h  app_controller_spd.cpp  app_controller_state.cpp  app_controller_state.h  app_controller_vf.cpp  cost.cpp  cost.cpp.orig  cost.h  knowledge.cpp  knowledge.h  manipulator.cpp  manipulator.h  predicate.cpp  predicate.h  rapidxml_helper.cpp  rapidxml_helper.h  rig.cpp  rig.h  simpack.cpp  simpack.h
src/apps/knowledge/gui/: CMakeLists.txt  GuiKinController.cpp  GuiKinController.cpp.orig  GuiKinController.h  GuiKinController.h.orig  GuiKinController.h.rej  MyKinController.cpp.orig  application.cpp  application.cpp.orig  application.h  camera.cpp  camera.h  glwidget.cpp  glwidget.h  main.cpp  motion.cpp  motion.h  widget_opt_explorer.cpp  widget_opt_explorer.h  window.cpp  window.h
src/apps/knowledge/mpiclient/: CMakeLists.txt  mpiclient  mpiclient.cpp  mpiclient.h  mpilocalclient.cpp  mpilocalclient.h  mpisshclient.cpp  mpisshclient.h
src/apps/knowledge/mpisolver/: CMA2.cpp  CMA2.h  CMakeLists.txt  ClusterCMA.cpp  ClusterCMA.h  MPICMASearch.cpp  MPICMASearch.h  Rclustering.cpp  Rclustering.h  cmacsvwriter.cpp  cmacsvwriter.h  cmaxmlwriter.cpp  cmaxmlwriter.h  master.cpp  master.h  mpisolver.cpp  worker.cpp  worker.h
src/apps/knowledge/mpisolver2/: CMakeLists.txt  MPICMASearch.cpp  MPICMASearch.h  boumancluster.cpp  boumancluster.h  commandcenter.cpp  commandcenter.h  database.cpp  database.h  dbxmlwriter.cpp  dbxmlwriter.h  evaluator.cpp  evaluator.h  explorer.cpp  explorer.h  mycma.cpp  mycma.h  optimizer.cpp  optimizer.h  rcluster.cpp  rcluster.h  sample.cpp  sample.h  solver2_main.cpp  worker.cpp  worker.h
src/apps/knowledge/operation/: CMakeLists.txt.orig  interpreter.cpp  interpreter.cpp.orig  interpreter.h  interpreter.h.orig  op_controller.cpp  op_controller.cpp.orig  op_controller.h  op_controller.h.orig  operation.cpp.orig  operation.h
src/apps/knowledge/server/: CMakeLists.txt  main.cpp  worker.cpp  worker.h
src/apps/knowledge/solver/: CMakeLists.txt.orig  boumancluster.cpp  boumancluster.h  evaluator.cpp  evaluator.h.orig  exp_sample.h.orig  explorer.cpp.orig  explorer.h  model.cpp  model.cpp.orig  model.h  model.h.orig  mycma.cpp  mycma.h.orig  problem.cpp  problem.h  problem.h.orig  problem_solve3.cpp  problem_solve3.cpp.orig  remotedb.cpp  remotedb.h.orig  sample.cpp  sample.cpp.orig  sample.h  solver.cpp  solver.h
src/apps/knowledge/toy/: CMakeLists.txt.orig  cluster.cpp  cluster.h  prob.cpp.orig  prob.h  toy.cpp.orig
src/geometry/: CMakeLists.txt  CornerTable.cpp  CornerTable.h  Mesh3D.cpp  Mesh3D.h  Mesh3DTriangle.cpp  Mesh3DTriangle.h
src/kinect/: CMakeLists.txt  KinAudioHandler.cpp  KinAudioHandler.h  KinAudioStream.cpp  KinAudioStream.h  KinCntrlHand.cpp  KinCntrlHand.h  KinCntrlrXMLReader.cpp  KinCntrlrXMLReader.h  KinDepthHandler.cpp  KinDepthHandler.h  KinHndlrConsts.h  KinImageHandler.cpp  KinImageHandler.h  KinInteractClient.cpp  KinInteractClient.h  KinInteractHandler.cpp  KinInteractHandler.h  KinLibHelper.h  KinNNet.cpp  KinNNet.h  KinSkelHandler.cpp  KinSkelHandler.h  KinSkelIKJntCnstrnt.cpp  KinSkelIKJntCnstrnt.h  KinSkelIKSolver.cpp  KinSkelIKSolver.h  KinStreamHandler.cpp  KinStreamHandler.h  KinUIButton.cpp  KinUIButton.h  KinUICaption.cpp  KinUICaption.h  KinUIComponent.cpp  KinUIComponent.h  KinUICrank.cpp  KinUICrank.h  KinUIImageButton.cpp  KinUIImageButton.h  KinUIPage.cpp  (+13 more)
src/kinematics/: BodyNode.cpp  BodyNode.h  C3D.cpp  C3D.h  CMakeLists.txt  Dof.cpp  Dof.h  FileInfoC3D.cpp  FileInfoC3D.h  FileInfoDof.cpp  FileInfoDof.h  FileInfoSkel.hpp  Joint.cpp  Joint.h  Marker.cpp  Marker.h  ParserSkel.cpp  ParserSkel.cpp.orig  ParserSkel.h  ParserVsk.cpp  ParserVsk.h  Shape.cpp  Shape.h  ShapeCube.cpp  ShapeCube.h  ShapeEllipsoid.cpp  ShapeEllipsoid.h  ShapeMesh.cpp  ShapeMesh.h  Skeleton.cpp  Skeleton.h  Transformation.cpp  Transformation.h  TrfmRotateEuler.cpp  TrfmRotateEuler.h  TrfmRotateExpmap.cpp  TrfmRotateExpmap.h  TrfmRotateQuat.cpp  TrfmRotateQuat.h  TrfmTranslate.cpp  (+1 more)
src/lcpsolver/: CMakeLists.txt  LCPSolver.cpp  LCPSolver.h  Lemke.cpp  Lemke.h  matrix.cpp
src/optimizer/: CMakeLists.txt  Constraint.cpp  Constraint.h  ConstraintBox.cpp  ConstraintBox.h  ObjectiveBox.cpp  ObjectiveBox.h  OptimizerArrayTypes.h  Problem.cpp  Problem.h  Solver.cpp  Solver.h  Var.cpp  Var.h
src/renderer/: CMakeLists.txt  Camera.h  Light.h  OpenGLCamera.h  OpenGLRenderInterface.cpp  OpenGLRenderInterface.h  RenderInterface.cpp  RenderInterface.h
src/simulation/: CMakeLists.txt  World.cpp  World.h
src/toolkit/: CMakeLists.txt  Controller.cpp  Controller.h  CppCommon.h  Gleigen.h  HLog.cpp  HLog.h  Moreeigen.cpp  Moreeigen.h  SimStates.h  Simulator.cpp  Simulator.h  SimulatorDynamics.cpp  State.cpp  State.hpp  Toolkit.h
src/yui/: CMakeLists.txt  GLFuncs.cpp  GLFuncs.h  GlutWindow.cpp  GlutWindow.h  Trackball.cpp  Trackball.h  Win2D.cpp  Win2D.h  Win3D.cpp  Win3D.h
unittests/: CMakeLists.txt
(+152 files in other folders)
